# UELinker

./: .gitignore  CMakeLists.txt  README.md  index.html  install.sh
src/: AddEditorDialog.cpp  AddEditorDialog.h  ConfigManager.cpp  ConfigManager.h  DesktopEntryWriter.cpp  DesktopEntryWriter.h  EditorCardWidget.cpp  EditorCardWidget.h  EditorEntry.h  MainWindow.cpp  MainWindow.h  ViewEditorsPage.cpp  ViewEditorsPage.h  main.cpp
web/: index.html  install.sh
webSrc/: main.js  style.css
